syntax = "proto3";
package pb;
option go_package = "./pb;client_pb";

message StringRequest {
  string A = 1;
  string B = 2;
}

message StringResp {
  string Ret = 1;
  string err = 2;
}

service StringService {
  rpc Concat(StringRequest) returns (StringResp) {}
  rpc Diff(StringRequest) returns (StringResp) {}
}